css/components/main-carrossel.css
.main-carrossel{
    display: flex;
    justify-content: space-between;
    position: relative;
    padding-left: 85px;
    padding-right: 85px;
}

.main-carrossel::after{
    content: '';
    position: absolute;
    left: 50px;
    top: 38px;
    display: block;
    height: 6px;
    width: calc(100% - 100px);
    background-color: black;
}

.main-carrossel::before{
    content: '';
    position: absolute;
    left: 0px;
    top: 38px;
    display: block;
    border: 3px dashed black;
    width: 100%;
}

.main-carrossel .button-arrow{
    position: absolute;
    bottom: 70px;
    transform: translateY(50%);
}

.main-carrossel .button-arrow.-left{
    left: 15px;
}

.main-carrossel .button-arrow.-right{
    right: 15px;
}

